CVS HEAD:
 * updated translations:
  * French
	
Version 0.8.11:
 * new translation:
  * British English
 * updated translations:
  * Basque
  * Catalan
  * French
  * German
  * Italian
  * Latin
  * Slovenian
  * Swedish
 * in language-selection dialog, consistently use native name for
   all languages, with the (hopefully) official latin transcription
   for those that cannot be displayed in the default font (russian,
   bulgarian, greek)
 * language fixes and polishing (English)
 * campaign fixes and changes:
  * fixed Delfador appearing in the water when turns run out in 'The Bay of Pearls' (HttT)
  * updated maps for: 'Northern Winter' & 'Mountain Pass' (HttT)
  * updated 'Evacuation' & 'Captured' (EI)
  * fixed the talking tentacle in 'Temple of the Deep' (TroW)
  * switch to the new Merfolk and Nagas in TRoW and HttT
 * unit fixes and changes:
  * fixed several units using non-existing sound files
  * added sounds (existing) to several attacks
  * updated all uses of the 'old fireball' to use the 'new fireballs'
  * added new images and animations for all mages
  * updated the attack frame sequences for the Drakes
  * added attack icons for 'slam' and 'ballista'
  * obsoleted all instances of the old 'Mermen' & 'Naga' unit lines
  * modified defense weight for Drake Slasher
  * decreased hitpoints for Gate
  * renamed 'Elvish Lady Parandra' 'Elvish Lady'
  * made all mages use staff (impact) as melee attack
  * added support for directional attack animations
 * fixed slovene being wrongly localized as sl_SL insteof sl_SI
 * fixed zipios support so that user campaigns custom images and sounds can be loaded
 * fixed locale-dependent numeric input/output bug,
   it allowed units to walk on the water, and prevented
   the AI from being correctly configured in campaigns
 * use fixed-point arithmetics in critical functions, so that wesnoth
   can reasonably run on an FPU-less machine (eg. ipaq PDA)
 * fixed the width of 'HP' and 'XP' in the right side panel