@@ -1,7 +1,10 @@
 CVS HEAD:
  * updated translations:
   * French
-	
+ * when using zipios, ignore {~...} clauses, and handle {@...} as if there
+   was no '@', fixing the double appearance of user campaigns in the
+   campaign listing
+
 Version 0.8.11:
  * new translation:
   * British English
